Adjusted values for mobile responsiveness, added cart icon, placeholder for item count

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,11 @@
 
 body {
   margin: 0;
+  padding: 0;
+  @apply bg-slate-200;
+  @apply min-h-full;
+  @apply w-full;
+  @apply relative;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -14,10 +19,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
-
-input,
-button,
-label {
-  @apply m-1;
 }
